# FaceRecProtectSys

./: .gitignore  LICENSE  README.md
ATMInterface/: atminterface.py  gui.glade  gui.glade~
ATMInterface/Camera/: CMakeLists.txt  FaceTracker  cArduino.h  facetracker.cpp
ATMInterface/Camera/ArduinoDriver/: ArduinoDriver.ino
Analysis/: faces.py  yaleB00_con  yaleB00_neg  yaleB00_pos  yaleB01_neg  yaleB01_pos  yaleB02_con  yaleB02_neg  yaleB02_pos  yaleB03_neg  yaleB03_pos  yaleB04_neg  yaleB04_pos  yaleB05_neg  yaleB05_pos  yaleB06_neg  yaleB06_pos  yaleB07_neg  yaleB07_pos  yaleB08_neg  yaleB08_pos  yaleB09_neg  yaleB09_pos  yaleB10_neg  yaleB10_pos  yaleB11_neg  yaleB11_pos  yaleB12_con  yaleB12_neg  yaleB12_pos  yaleB13_con  yaleB13_neg  yaleB13_pos  yaleB15_neg  yaleB15_pos  yaleB16_neg  yaleB16_pos  yaleB17_neg  yaleB17_pos  yaleB18_con  (+44 more)
Arduino/: facetracker.cpp
Arduino/ArduinoDriver/: ArduinoDriver.ino
AuthenticationServer/: authserver.py  newuser.py  showsample.py
AuthenticationServer/Users/874300775423885/: 874300775423885.yml
LBPHDescriptor Example/: LBPHDescriptor.py  UniformLBPCombinations.py
MobileToken/MobilniToken/: AppDelegate.swift  SettingsViewController.swift  ViewController.swift
MobileToken/MobilniToken.xcodeproj/: project.pbxproj
MobileToken/MobilniToken.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MobilniToken/MobilniToken/: AppDelegate.swift  SettingsViewController.swift  ViewController.swift  ytcpsocket.swift
MobilniToken/MobilniToken.xcodeproj/: project.pbxproj
Sonar/sonar/: sonar.pde
(+10 files in other folders)
